create basic structure for comments features, add router for comments features in comments.router.js to handle endpoint for comment features, create CommentsModel and CommentsController to handle request, add functionality to getAllComment request handler to send comments for require post, create static function in Comment model to filter the comments for require post and handle error if no post exists, update swagger for GET comments/id to handle request
