# swagger.json
@@ -818,6 +818,80 @@
                 }
               }
             }
-          }         
+        },
+        "/comments/{id}": {
+  "get": {
+    "tags": ["comments"],
+    "summary": "Retrieve all comments based on Post ID",
+    "description": "Fetches comments by Post ID. If comments exist, it returns all comments belonging to the specified post. Otherwise, it returns a 404 error.",
+    "parameters": [
+      {
+        "name": "id",
+        "in": "path",
+        "required": true,
+        "schema": {
+          "type": "string",
+          "example": "1"
+        },
+        "description": "ID of the post to retrieve comments for"
+      }
+    ],
+    "responses": {
+      "200": {
+        "description": "Comments retrieved successfully",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "posts": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "id": {
+                        "type": "integer",
+                        "example": 1
+                      },
+                      "userId": {
+                        "type": "integer",
+                        "example": 1
+                      },
+                      "postId": {
+                        "type": "integer",
+                        "example": 1
+                      },
+                      "content": {
+                        "type": "string",
+                        "example": "Amazing post!"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "404": {
+        "description": "Comments not found for this post",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "Please check the post ID and try again. No comments found for post ID: 3"
+                }
+              }
+            }
+          }
+        }
+      }
     }
+  }
+        }
+
+      }
 }
